2000-09-29  Darin Adler  <darin@eazel.com>

	* test/test-uri.c: (main): Added a test to demonstrate how badly
	gnome_vfs_uri_new handles paths that start with "//".

2000-09-29  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Turn "make check" back on.
	* test/Makefile.am: Fix tests so they work even before gnome-vfs
	is installed for the first time. This has a nice side effect of
	making the test actually test the compiled code, not a previously
	installed version.

2000-09-29  J Shane Culpepper  <pepper@eazel.com>

	* test/gnome-file-selection/gnome-file-selection-history.c:
	* test/test-dirop.c:
	* test/test-escape.c:
	* test/test-mime-handlers-set.c:
	* test/test-mime-handlers.c:
	* test/test-mime-info.c:
	* test/test-mime.c:
	* test/test-sync-create.c:
	* test/test-sync-write.c:
	* test/test-sync.c:
	* test/test-unlink.c:
	* test/test-uri.c:

	Fixing heaps of inlined function errors.  The new redhat compilers
	do not recognize functions like exit, strcmp, etc without the correct
	header anymore.  gnome-vfs now builds happily on RedHat 7.0.

2000-09-29  J Shane Culpepper  <pepper@eazel.com>

	* libgnomevfs/gnome-vfs-directory-filter.c:

	Adding <string.h> include so that above file builds right on
	newer compilers.

2000-09-29  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Turn off "make check" since it doesn't work
	until the library is installed because of the back end.
	* test/test-uri.c: (main): Add some test cases.

2000-09-29  Darin Adler  <darin@eazel.com>

	* gnome-vfs.spec.in: Make RPM builds do "make check" and also make
	them compile with warnings on. This make the Tinderbox more
	strict. Also use "make -k" so we get more errors at once on the
	Tinderbox. Errors are still errors, we just see more of them.
	
	* libgnomevfs/gnome-vfs-xfer.c: (system_time), (init_progress):
	Fix code to not use LL explicitly since that's not as portable as
	gint64 is.
	(init_progress): Got rid of code initializing the same fields to
	NULL twice.